Fixed whitespace issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -271,7 +271,8 @@ textarea {
     outline:none;
     padding: .5rem 1rem;
     font-size: 1.1rem;
-    margin: 1rem .5rem;
+    margin: 0 .5rem;
+    margin-top: 1rem;
 
     &:hover {
       background-color: lighten($color: $PINK, $amount: 5%);
